--- a/app/templates/all-movies-with-posters.html
+++ b/app/templates/all-movies-with-posters.html
@@ -139,7 +139,8 @@
           {% elif movie.liked == 3 %}
             <span>&#128078;</span> <!-- Trash can -->
         
-           {% endif %}</td>
+           {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}
+           </td>
           <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td>
           <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
           <td>{{ movie.runtime }}</td>
@@ -191,7 +192,7 @@
           {% elif movie.liked == 3 %}
             <span>&#128078;</span> <!-- Trash can -->
         
-           {% endif %}</td>
+           {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
         <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td>
         <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
         <td>{{ movie.runtime }}</td>
