--- a/app/templates/person-details.html
+++ b/app/templates/person-details.html
@@ -74,7 +74,7 @@
           {% elif movie.liked == 3 %}
             <span>&#128078;</span> <!-- Trash can -->
         
-           {% endif %}</td>
+           {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
               <td>{{ movie.genres }}</td>
               <td>{{ movie.rewatchScore }}</td>
               <!-<td>#{{ movie.rank }}</td> -->
