--- a/app/templates/unlogged.html
+++ b/app/templates/unlogged.html
@@ -32,7 +32,7 @@
           {% elif movie.liked == 3 %}
             <span>&#128078;</span> <!-- Trash can -->
         
-           {% endif %}</td>
+           {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
               <td style="{% if movie.stars is none or movie.stars is string and movie.stars.isdigit() == False %}color:white;
               {% elif movie.stars|string|int >= 8 %}color:green;
               {% elif movie.stars|string|int >= 6 %}color:orange;
