--- a/app/templates/unwatched-with-poster.html
+++ b/app/templates/unwatched-with-poster.html
@@ -126,7 +126,7 @@
             <span>&#129309;</span> <!-- Handshake -->
           {% elif movie.liked == 3 %}
             <span>&#128078;</span> <!-- Trash can -->
-        {% endif %}</td>
+        {% endif %}{% if movie.onComputer %} 🖥️ {% endif %}</td>
       <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td>
       <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
       <td>{{ movie.runtime }}</td>
