--- a/app/templates/unwatched.html
+++ b/app/templates/unwatched.html
@@ -96,7 +96,7 @@
           {% elif movie.liked == 3 %}
             <span>&#128078;</span> <!-- Trash can -->
         
-           {% endif %}</td>
+           {% endif %} {% if movie.onComputer %} 🖥️ {% endif %}</td>
       <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td>
       <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
       <td>{{ movie.runtime }}</td>
