--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -13,7 +13,8 @@
     <div class="col-3">
       <div class="row">
         <div class="col-12">
-          <img src="{{ poster }}" alt="Poster Not Available.">
+          <!-- <img src="{{ poster }}" alt="Poster Not Available."> -->
+          <img src="{{ poster }}" alt="Poster Not Available">
         </div>
       </div>
       <div class="row">
