--- a/app/templates/details-with-similar.html
+++ b/app/templates/details-with-similar.html
@@ -135,7 +135,7 @@
             {% for movie in similar1 %}
             <tr>
               <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                    src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                    src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
               <td><a style="color: brown;" style="color: brown;"
                   href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' title="{{ movie.year }}"  target="_blank"> <u>
                     {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
@@ -161,7 +161,7 @@
             {% for movie in actualMovie %}
             <tr>
               <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                    src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                    src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
               <td style="background-color: beige;"><a href='http://www.google.com/search?q={{movie.title}}'
                   target="_blank" title="{{ movie.year }}"> <u> {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
@@ -186,7 +186,7 @@
             {% for movie in similar2 %}
             <tr>
               <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                    src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                    src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
               <td><a style="color: brown;" href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})'
                 title="{{ movie.year }}"   target="_blank"> <u> {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
@@ -232,7 +232,7 @@
           {% for movie in similarRanking %}
           <tr>
             <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                  src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                  src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
             <td><a style="color: brown;" style="color: brown;"
                 href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' title="{{ movie.year }}"  target="_blank"> <u>
                   {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
@@ -276,7 +276,7 @@
           {% for movie in unwatchedRecommended %}
           <tr>
             <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                  src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                  src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
             <td><a style="color: brown;" style="color: brown;"
                 href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})'  title="{{ movie.year }}" target="_blank"> <u>
                   {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
@@ -318,7 +318,7 @@
             {% for movie in similarDirector %}
             <tr>
               <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                    src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                    src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
               <td><a style="color: brown;" style="color: brown;"
                   href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})'  title="{{ movie.year }}" target="_blank"> <u>
                     {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
@@ -337,7 +337,7 @@
             {% for movie in relatedMovies %}
             <tr>
               <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                    src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                    src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
               <td><a style="color: brown;" style="color: brown;"
                   href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' title="{{ movie.year }}"  target="_blank"> <u>
                     {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
