--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -275,7 +275,7 @@
             {% for movie in similar1 %}
             <tr>
               <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                    src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                    src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
               <td><a style="color: brown;" style="color: brown;"
                   href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' title="{{ movie.year }}"  target="_blank"> <u> 
                     {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
@@ -301,7 +301,7 @@
             {% for movie in actualMovie %}
             <tr>
               <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                    src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                    src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
               <td style="background-color: beige;"><a href='http://www.google.com/search?q={{movie.title}}'
                 title="{{ movie.year }}"  target="_blank"> <u> {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
@@ -326,7 +326,7 @@
             {% for movie in similar2 %}
             <tr>
               <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                    src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                    src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
               <td><a style="color: brown;" href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})'
                 title="{{ movie.year }}"     target="_blank"> <u> {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
