--- a/app/templates/index-trending.html
+++ b/app/templates/index-trending.html
@@ -90,7 +90,7 @@
           {% for movie in hottestMovies %}
           <tr>
             <td style="width: 10%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img
-                  src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available."> </a></td>
+                  src="{{ movie.title|get_poster}}" alt="Poster Not Available."> </a></td>
             <td><a style="color: brown;" href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' title="{{ movie.year }}"  target="_blank"> <u> {{ movie.title }}  </u></a>  {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
           {% elif movie.liked == 2 %}
