--- a/app/templates/list-details-no-add.html
+++ b/app/templates/list-details-no-add.html
@@ -68,7 +68,7 @@
             </tr>
             {% for movie in movies %}
             <tr>
-              <td style="width: 10%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="/static/images/movieposters/{{ movie.poster }}" alt="Poster Not Available.">  </a></td>
+              <td style="width: 10%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.title|get_poster }}" alt="Poster Not Available.">  </a></td>
               <td><a style="color: brown;" href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' title="{{ movie.year }}"  target="_blank"> <u> {{ movie.title }} ({{movie.year}})  </u></a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
           {% elif movie.liked == 2 %}
