--- a/app/templates/ranking-details-from-list.html
+++ b/app/templates/ranking-details-from-list.html
@@ -13,7 +13,7 @@
       <img style="display: block;
       margin-left: auto;
       margin-right: auto;
-      " width="25%" src="{{ poster }}" alt="Poster Not Available.">
+      " width="25%" src="{{ movie.title|get_poster }}" alt="Poster Not Available.">
     </div>
   </div>
       <div class="row">
