--- a/app/templates/details-unwatched.html
+++ b/app/templates/details-unwatched.html
@@ -13,7 +13,7 @@
     <div class="col-3">
       <div class="row">
         <div class="col-12">
-          <img src="{{ poster }}" alt="Poster Not Available.">
+          <img src="{{ movie.title|get_poster }}" alt="Poster Not Available.">
         </div>
       </div>
     </div>
