--- a/app/templates/ranking-details-by-stars.html
+++ b/app/templates/ranking-details-by-stars.html
@@ -22,7 +22,7 @@
           <div style="display: inline-block;">
             <!-- Anchor tag directly wrapping the image -->
             <a href='/details/{{movie.id}}' title="#{{movie.rank}}">
-              <img style="width: 30%; margin-left: auto; margin-right: auto;" src="{{ poster }}" alt="Poster Not Available.">
+              <img style="width: 30%; margin-left: auto; margin-right: auto;" src="{{ movie.title|get_poster }}" alt="Poster Not Available.">
             </a>
           </div>
   
