--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -106,12 +106,6 @@
             <li class="nav-item">
               <a class="nav-link" href="/lists">Lists</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="/genre-rankings">Genres</a>
-            </li> -->
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="/logs">Logs</a>
-            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="/movie-finder">Movie Finder</a>
             </li>
@@ -121,53 +115,14 @@
             <li class="nav-item">
               <a class="nav-link" href="/add-movie">Add Movie</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="/rankings-types">Rankings</a>
-            </li> -->
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="/rank-all">Rank All Movies</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="/rank-by-proximity">Rank By Proximity</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="/rank-by-winner/0">Rank By King of the Court</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="/rank-by-recent">Rank Recently Watched</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="/rank-by-unranked">Rank Unranked Watched</a>
-            </li> -->
-            <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="/rankings">Head To Head Rankings</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="/rankings-by-stars">Stars Rankings</a>
-            </li> -->
-            <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="/recently-watched">Recently Watched</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="/rewatch">Rewatch List</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="/unwatched">Unwatched List</a>
-            </li> -->
           </ul>
         </div>
       </nav>
 
-    <div class="wrapper" style="padding-top: 5px">
-      <div class="main">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-xl-12 col-lg-12 col-sm-12 col-md-12">{% block content %}{% endblock %}</div>
-          </div>
-          
-        </div>
+      <div class="wrapper" style="padding-top: 5px; padding-left: 5%; padding-right: 5%;">
+        <div class="col-xl-12 col-lg-12 col-sm-12 col-md-12">{% block content %}{% endblock %}</div>
+  
       </div>
-    </div>
 
     
 
