--- a/app/templates/logs-first-watch.html
+++ b/app/templates/logs-first-watch.html
@@ -162,7 +162,7 @@
         <tr>
           <td style=" text-align: center;
           vertical-align: middle; width: 10%;"><a href='/details/{{movie.movieId}}'><img src="{{ movie.movieTitle|get_poster }}" alt="Poster Not Available.">  </a></td>
-          <!-- <td style="width: 10%;"> <img src="{{ movie.title|get_poster }}" alt="Poster Not Available."> </td> -->
+          <!-- <td style="width: 10%;"> <img src="{{ movie.title|get_poster (movie.year)}}" alt="Poster Not Available."> </td> -->
           <td><a href='http://www.google.com/search?q={{movie.movieTitle}}' target="_blank"> {{ movie.movieTitle }}</a> {% if movie.movieLiked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
           {% elif movie.movieLiked == 2 %}
