--- a/app/templates/person-details.html
+++ b/app/templates/person-details.html
@@ -66,7 +66,7 @@
             <!-- </tr>
             {% for movie in movies %}
             <tr>
-              <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.title|get_poster }}" alt="Poster Not Available.">  </a></td>
+              <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.title|get_poster (movie.year)}}" alt="Poster Not Available.">  </a></td>
               <td><a style="color: brown;" href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' target="_blank"> <u> {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
           {% elif movie.liked == 2 %}
@@ -115,7 +115,7 @@
         <tr>
           <td style=" text-align: center;
           vertical-align: middle; width: 10%;"><a href='/update-log/{{movie.id}}'><img src="{{ movie.movieTitle|get_poster }}" alt="Poster Not Available.">  </a></td>
-          <!-- <td style="width: 10%;"> <img src="{{ movie.title|get_poster }}" alt="Poster Not Available."> </td> -->
+          <!-- <td style="width: 10%;"> <img src="{{ movie.title|get_poster (movie.year)}}" alt="Poster Not Available."> </td> -->
           <td><a href='http://www.google.com/search?q={{movie.movieTitle}}' target="_blank"> {{ movie.movieTitle }}</a></td>
           <!-- <td><a  href='/all-movies-year/{{movie.year}}'>  {{ movie.year }} </a></td> -->
           <!-- <td><a href='/all-movies/{{movie.director}}'> {{ movie.director }} </a></td>
