--- a/app/templates/unlogged.html
+++ b/app/templates/unlogged.html
@@ -24,7 +24,7 @@
         {% for movie in movies %}
         <tr>
           <td style=" text-align: center;
-          vertical-align: middle; width: 10%;"><a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.title|get_poster }}" alt="Poster Not Available.">  </a></td>
+          vertical-align: middle; width: 10%;"><a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.title|get_poster (movie.year)}}" alt="Poster Not Available.">  </a></td>
           <td><a style="color: brown;" style="color: brown;"
             href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' target="_blank"> <u> 
               {{ movie.title }} ({{movie.year}})   </u></a> {% if movie.liked == 1 %}
