--- a/app/templates/best-of-year-ordered.html
+++ b/app/templates/best-of-year-ordered.html
@@ -43,11 +43,11 @@
                             {% endif %}
                         </td>
                         <td style=" text-align: center;
-          vertical-align: middle; width: 10%;"><a href='/details/{{top_movie_id_1}}'><img src="/static/images/movieposters/{{ top_movie_poster_1 }}" alt=""></a> </td>
+          vertical-align: middle; width: 10%;"><a href='/details/{{top_movie_id_1}}'><img src="{{ top_movie_poster_1 }}" alt=""></a> </td>
           <td style=" text-align: center;
-          vertical-align: middle; width: 10%;"><a href='/details/{{top_movie_id_2}}'><img src="/static/images/movieposters/{{ top_movie_poster_2 }}" alt=""></a> </td>
+          vertical-align: middle; width: 10%;"><a href='/details/{{top_movie_id_2}}'><img src="{{ top_movie_poster_2 }}" alt=""></a> </td>
           <td style=" text-align: center;
-          vertical-align: middle; width: 10%;"><a href='/details/{{top_movie_id_3}}'><img src="/static/images/movieposters/{{ top_movie_poster_3 }}" alt=""></a> </td>
+          vertical-align: middle; width: 10%;"><a href='/details/{{top_movie_id_3}}'><img src="{{ top_movie_poster_3 }}" alt=""></a> </td>
                     </tr>
                     {% endfor %}
                 </table>
