--- a/app/templates/list-details.html
+++ b/app/templates/list-details.html
@@ -72,7 +72,7 @@
             </tr>
             {% for movie in movies %}
             <tr>
-              <td style="width: 10%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.title|get_poster (movie.year)}}" alt="Poster Not Available.">  </a></td>
+              <td style="width: 10%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.id|get_poster(movie.title, movie.year, movie.poster)}}" alt="Poster Not Available.">  </a></td>
               <td><a style="color: brown;" href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})'  title="{{ movie.year }}" target="_blank"> <u> {{ movie.title }}  </u> ({{movie.year}}) </a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
           {% elif movie.liked == 2 %}
@@ -138,7 +138,7 @@
           </tr>
           {% for movie in unwatched %}
           <tr>
-            <td style="width: 10%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.title|get_poster (movie.year)}}" alt="Poster Not Available.">  </a></td>
+            <td style="width: 10%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.id|get_poster(movie.title, movie.year, movie.poster)}}" alt="Poster Not Available.">  </a></td>
             <td><a style="color: brown;" href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' title="{{ movie.year }}"  target="_blank"> <u> {{ movie.title }}  </u>({{movie.year}})</a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
           {% elif movie.liked == 2 %}
@@ -276,7 +276,7 @@
               </tr>
               {% for movie in allMovies %}
               <tr>
-                <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.title|get_poster (movie.year)}}" alt="Poster Not Available.">  </a></td>
+                <td style="width: 16%;"> <a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.id|get_poster(movie.title, movie.year, movie.poster)}}" alt="Poster Not Available.">  </a></td>
                 <td><a style="color: brown;" href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' title="{{ movie.year }}"  target="_blank"> <u> {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
           {% elif movie.liked == 2 %}
