--- a/app/templates/ranking-details-from-list.html
+++ b/app/templates/ranking-details-from-list.html
@@ -13,7 +13,7 @@
       <img style="display: block;
       margin-left: auto;
       margin-right: auto;
-      " width="25%" src="{{ movie.title|get_poster (movie.year)}}" alt="Poster Not Available.">
+      " width="25%" src="{{ movie.id|get_poster(movie.title, movie.year, movie.poster)}}" alt="Poster Not Available.">
     </div>
   </div>
       <div class="row">
@@ -32,7 +32,7 @@
               <span>&#128078;</span> <!-- Trash can -->
           
               {% endif %}
-                 <a href='/rank-by-specific/{{movie.id}}/{{winner.loserMovieId}}'><img width="50%" src="/static/images/movieposters/{{ winner.winnerPoster }}" alt="Poster Not Available.">  </a>
+                 <a href='/rank-by-specific/{{movie.id}}/{{winner.loserMovieId}}'><img width="50%" src="{{winner.loserMovieId|get_poster(winner.winnerTitle, winner.winnerYear, winner.winnerPoster)}}" alt="Poster Not Available.">  </a>
             </div>
                     {% endfor %}
           </div>
@@ -55,7 +55,7 @@
                 <span>&#128078;</span> <!-- Trash can -->
             
                 {% endif %}
-                <a href='/rank-by-specific/{{movie.id}}/{{loser.winnerMovieId}}'><img width="50%" src="/static/images/movieposters/{{ loser.loserPoster }}" alt="Poster Not Available.">  </a>
+                <a href='/rank-by-specific/{{movie.id}}/{{loser.winnerMovieId}}'><img width="50%" src="{{loser.winnerMovieId|get_poster(loser.loserTitle, loser.loserYear, loser.loserPoster)}}" alt="Poster Not Available.">  </a>
               </div>
              
                       {% endfor %}
