--- a/app/templates/recentlywatched-with-posters.html
+++ b/app/templates/recentlywatched-with-posters.html
@@ -66,7 +66,7 @@
         {% for movie in movies %}
         <tr>
           <td style=" text-align: center;
-          vertical-align: middle; width: 10%;"><a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.title|get_poster (movie.year)}}" alt="Poster Not Available.">  </a></td>
+          vertical-align: middle; width: 10%;"><a href='/details/{{movie.id}}' title="#{{movie.rank}}"><img src="{{ movie.id|get_poster(movie.title, movie.year, movie.poster)}}" alt="Poster Not Available.">  </a></td>
           <!-- <td style="width: 10%;"> </td> -->
           <td><a style="color: brown;" href='http://www.google.com/search?q={{movie.title}} ({{movie.year}})' target="_blank"> <u> {{ movie.title }}  </u></a> {% if movie.liked == 1 %}
             <span style="color: red;">&#128077;</span> <!-- Red heart -->
